--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "viem": "latest",
     "wagmi": "latest"
   },
