--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "5.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.2",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +30,10 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
+    "@zk-kit/imt": "^2.0.0-beta.5",
+    "@zk-kit/incremental-merkle-tree": "^1.1.0",
+    "circomlibjs": "^0.1.7",
+    "snarkjs": "^0.7.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
@@ -37,8 +42,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
+    "@types/circomlibjs": "^0.1.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/snarkjs": "^0.7.8",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "latest",
     "autoprefixer": "^10.4.20",
@@ -46,6 +53,7 @@
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
